Fix the input alignment

--- a/owehub/gui/src/index.css
+++ b/owehub/gui/src/index.css
@@ -270,7 +270,7 @@ height: 16px !important;
   width: 48.5%;
 }
 .create-input-field {
-  width: 31.5%;
+  width: 30%;
 }
 .radio-container {
   display: flex;
